--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 header a {
-    color: #888888;
+    color: #029FF3;
     margin-right: 16px;
     text-decoration: none;
 }
@@ -49,7 +49,7 @@ input {
 button {
     cursor: pointer;
     border: 1px solid #888888;
-    background: #888888;
+    background: #00E3F9;
     color: white;
     padding: 8px;
 }
