--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>This site was created by adi. It uses data from mapbox.com and darksky.net! however api site is no longer functional</p>
-        <img class="portrait" src="/img/me.png">
+        <img class="portrait" src="/public/img/me.PNG">
     </div>
     
     {{>footer}}
